# src/routes/reagents.routes.js
@@ -1,9 +1,9 @@
-import { Router } from "express";
-import { getReagents, getReagent } from "../controllers/reagents.controller.js";
+import { Router } from 'express';
+import { getReagents, getReagent } from '../controllers/reagents.controller.js';
 
 const reagentsRouter = Router();
 
-reagentsRouter.get("/", getReagents);
-reagentsRouter.get("/:casNumber", getReagent);
+reagentsRouter.get('/', getReagents);
+reagentsRouter.get('/:casNumber', getReagent);
 
 export default reagentsRouter;
